--- a/programas.html
+++ b/programas.html
@@ -31,25 +31,21 @@
     <section id="pai">
         <div id="pp">
             <ul id="lista">
-                <li id="programa"><a class="lcor" href="https://www.google.com/intl/pt-BR/chrome/" target="_blank">&#x1F60E Google Chrome</li></a>
-                <li id="programa" class="lado"><a class="lcor" href="https://www.pingplotter.com/download/" target="_blank">&#x1F60E PINGplotter</li></a>
-                <li class="lado"><a id="corr"> ( Medidor de Rotas IPS )</a></li>
-                <li id="programa"><a class="lcor" href="https://crystalmark.info/en/download/" target="_blank">&#x1F60E CrystalDiskMark - Medir velocidade de SSD, HD</li></a>
-                <li id="programa" class="lado"><a class="lcor" href="https://br.easeus.com/data-recovery-software/data-recovery-wizard-free.html?utm_source=mestresdainformatica&utm_medium=youtubevideo&utm_campaign=chris-202405-drw-ful" target="_blank">&#x1F60E EaseUS Data Recovery Wizard</li></a>
-                <li class="lado"><a id="corr"> ( Recuperador de Arquivos apagados ) <strong style="color: brown;">(PAGO)</strong></a></li><br>
-            
-                <li id="programa" class="lado"><a class="lcor" href="https://encurtador.com.br/Jsuze" target="_blank">&#x1F60E  EaseUS Partition Master</li></a>
-                <li class="lado"><a id="cor"> ( REMOVE SENHA DE LOGIN DO WINDOWS )</a></li><br>
+                <li id="programapc" class="espaço"><a class="lcor" href="https://www.google.com/intl/pt-BR/chrome/" target="_blank">&#x1F60E Google Chrome</li></a>
+                <li id="programapc" class="espaço"><a class="lcor" href="https://www.pingplotter.com/download/" target="_blank">&#x1F60E PINGplotter - <em style="cursor: text; color: rgb(202, 206, 0);" >( Medidor de Rotas IPS )</em></li></a> 
+                <li id="programapc" class="espaço"><a class="lcor" href="https://crystalmark.info/en/download/" target="_blank">&#x1F60E CrystalDiskMark - <em style="cursor: text; color: rgb(202, 206, 0);" >Medir velocidade de SSD, HD</em></li></a> 
+                <li id="programapc" class="espaço"><a class="lcor" href="https://br.easeus.com/data-recovery-software/data-recovery-wizard-free.html?utm_source=mestresdainformatica&utm_medium=youtubevideo&utm_campaign=chris-202405-drw-ful" target="_blank">&#x1F60E EaseUS Data Recovery Wizard - <em style="cursor: text; color: rgb(202, 206, 0);" >( Recuperador de Arquivos apagados )</em></li></a>
 
-                <li id="programa" class="lado"><a class="lcor" href="https://www.ventoy.net/en/download.html" target="_blank">&#x1F60E MULTIBOOT - VENTOY</li></a>
-                <li id="programa"><a class="lcor" href="chroma MOUSE.zip" target="_blank" download="_blank">&#x1F60E Muda Seta do MOUSE</li></a>
-                <li id="programa"><a class="lcor" href="https://www.gimp.org/" target="_blank">&#x1F60E Gimp</li></a>
-                <li id="programa"><a class="lcor" href="https://pt-br.libreoffice.org/" target="_blank">&#x1F60E LibreOffice</li></a>
-                <li id="programa" class="lado"><a class="lcor" href="3DP_Net_v2101.zip" download="_blank">&#x1F60E 3DP NET</li></a>
-                <li class="lado"><a id="corr"> ( DRIVER DE Wi - Fi )</a></li>
-                <li id="programa"><a class="lcor" href="https://pdf.wondershare.com/pdf-reader.html?utm_source=youtube&utm_medium=influencer&utm_campaign=20240510hzzpe1xerifetech&utm_term=xerifetech&utm_content=pe_en_20034389_video" download="_blank" target="_blank">&#x1F60E PDF-reader</li></a>
-                <li id="programa" class="lado"><a class="lcor" href="https://www.win-rar.com/start.html?&L=9" target="_blank">&#x1F60E WinRAR</li></a>
-                <li class="lado"><a id="cor" href="rarreg.zip" download="_blank"> ( ATIVADOR DO WINRAR )</a></li>
+                <li id="programapc" class="espaço"><a class="lcor" href="https://br.easeus.com/partition-manager/partition-master-free.html" target="_blank">&#x1F60E EaseUS Partition Master - <a id="ladoAladoLinks" href="RecuperarSENHAdoWindows.mp4" download="Remove Senha de Login do Windows"> ( Remove Senha de Login do Windows )</a></li>
+                
+                <li id="programapc" class="espaço"><a class="lcor" href="https://www.ventoy.net/en/download.html" target="_blank">&#x1F60E MULTIBOOT - VENTOY</li></a>
+                <li id="programapc" class="espaço"><a class="lcor" href="chroma MOUSE.zip" target="_blank" download="_blank">&#x1F60E Muda Seta do MOUSE</li></a>   
+                <li id="programapc" class="espaço"><a class="lcor" href="https://www.gimp.org/" target="_blank">&#x1F60E Gimp</li></a>
+                <li id="programapc" class="espaço"><a class="lcor" href="https://pt-br.libreoffice.org/" target="_blank">&#x1F60E LibreOffice</li></a>
+                <li id="programapc" class="espaço"><a class="lcor" href="3DP_Net_v2101.zip" download="_blank">&#x1F60E 3DP NET - <em style="cursor: text; color: rgb(202, 206, 0);" >( DRIVER DE Wi - Fi )</em></li></a>
+                <li id="programapc" class="espaço"><a class="lcor" href="https://pdf.wondershare.com/pdf-reader.html?utm_source=youtube&utm_medium=influencer&utm_campaign=20240510hzzpe1xerifetech&utm_term=xerifetech&utm_content=pe_en_20034389_video" download="_blank" target="_blank">&#x1F60E PDF-reader</li></a>  
+                <li id="programapc" class="espaço"><a class="lcor" href="https://www.win-rar.com/start.html?&L=9" target="_blank">&#x1F60E WinRAR - <a id="ladoAladoLinks" href="rarreg.zip" download="rarreg" style="cursor: grab; color: rgb(243, 125, 125);"> ( ATIVADOR DO WINRAR )</a></li></a>
+
             </ul>
         </div>
     </section>
