--- a/CMD.html
+++ b/CMD.html
@@ -127,19 +127,18 @@
 	<article id="bold">
 		<fieldset>
 			<legend>BAIXAR VIDEO & AUDIO DO YOU-TUBE PELO CMD!</legend><br>
-			1*.. BAIXAR O YT-DLP > <a href="https://github.com/yt-dlp/yt-dlp?tab=readme-ov-file#installation" target="_blank">YT-DLP</a><br><br><br>
-			2*.. BAIXAR O FFmpeg > <a href="https://www.gyan.dev/ffmpeg/builds/" target="_blank">FFmpeg</a><br><br><br>
-			3*.. VAI NA UNIDADE <mark style="color: brown; background: none;">C:</mark> DO PC E CRIE UMA PASTA COM O NOME em MINUSCULO <mark>yt-dlp</mark><br><br><br>
-			4*.. MOVA O DOWNLOAD <mark style="color: brown; background: none;">YT-DLP</mark> QUE FOI BAIXADO PARA A PASTA CRIADA NA UNIDADE <mark style="color: brown; background: none;">C:</mark> DO PC <mark>yt-dlp</mark><br><br><br>
-			5*.. MOVA OS 3 ARQUIVOS DA PASTA <mark>BIN</mark> DO DOWNLOAD <mark style="color: brown; background: none;">FFmpeg</mark> PARA A PASTA CRIADA NA UNIDADE <mark style="color: brown; background: none;">C:</mark> DO PC <mark>yt-dlp</mark><br><br><br>
-			5*.. COPIA O DIRETORIO DA PASTA <mark>yt-dlp</mark> <br><br><br>
-			6*.. DIGITE NA BARRA DE PESQUISA DO WINDOWS POR <mark style="color: brown; background: none;"> VARIAVEIS DO SISTEMA</mark><br><br><br>
-			7*.. VAI EM <mark>AVANÇADO</mark> DEPOS EM <mark>VARIAVEIS DE AMBIENTE</mark>, PROCURE A OPCAO <mark>PATH</mark><br><br><br>
-			8*.. VAI EM <mark>EDITAR</mark> DA OPCAO <mark>PATH</mark>, DEPOIS VAI EM <mark>NOVO</mark> E COLE O <mark style="color: brown; background: none;">DIRETORIO DA PASTA </mark><mark>yt-dlp</mark> SO DA OK E PRONTO<br><br><br>
-			9*.. ABRA O CMD<br><br><br>
-			10*.. DIGITE: <mark>yt-dlp</mark> {mas o link do video que quer baixar} <mark style="color: brown; background: none;">PRA BAIXAR O VIDEO</mark> <br><br><br>
-			11*.. DIGITE: <mark>yt-dlp -x</mark> {mas o link do video que quer baixar} <mark style="color: brown; background: none;">PRA BAIXAR SO O AUDIO DO VIDEO</mark> <br><br><br> 
-			11*.. DOWNLOAD DO VIDEO EXPLICATIVO <a href="BAIXAR vídeos do YOUTUBE.webm" download="_blank">>> VIDEO EXPLICATIVO</a>
+			1*.. <b>ABRA O CMD</b><br><br><br>
+			2*.. <b>DIGITE:</b> <u style="color: rgb(87, 9, 9);">WINGET INSTALL yt-dlp.yt-dlp</u> <sup style="color: rgb(23, 65, 32);">( De Enter)</sup><br><br><br>
+			3*.. <b>DIGITE:</b> <u style="color: rgb(87, 9, 9);">WINGET INSTALL Gyan.FFmpeg</u> <sup style="color: rgb(23, 65, 32);">( De Enter)</sup><br><br><br>
+			4*.. <em style="color: rgb(23, 65, 32);">PRONTO - SO BAIXAR O VIDEO AGORA</em><br><br><br>
+			5*.. <b>DIGITE:</b> <u style="color: rgb(87, 9, 9);">YT-DLP</u> <em style="color: rgb(14, 0, 63);">[Mais a URL do Video do Youtube]</em> <sup style="color: rgb(23, 65, 32);">( De Enter)</sup><br><br><br>
+			6*.. O COMANDO ACIMA JA VAI BAIXAR O VIDEO NA MELHOR RESOLUÇÃO<br><br><br>
+			7*.. SE CASO QUEIRA BAIXAR EM OUTRA RESOLUÇÃO O VIDEO</b><br><br><br>
+			8*.. <b>DIGITE:</b> <u style="color: rgb(87, 9, 9);">YT-DLP -F</u> <em style="color: rgb(14, 0, 63);">[Mais a URL do Video do Youtube]</em> <sup style="color: rgb(23, 65, 32);">PRA PODER MOSTRAR OS FORMATOS</sup></b><br><br><br>
+			9*.. VOCE ESCOLHE O NUMERO DO ID DO VIDEO COMO NO Exemplo ABAIXO <sup style="color: rgb(99, 8, 8);">( 269 esse bestaudio ja baixa no melhor formato o audio )</sup></b><br><br><br>
+			10*.. <b>DIGITE:</b> <u style="color: rgb(87, 9, 9);">YT-DLP -f 269+bestaudio/best</u> <em style="color: rgb(14, 0, 63);">[Mais a URL do Video do Youtube] <sup style="color: rgb(23, 65, 32);">( De Enter)</sup></em></b><br><br><br>
+			11*.. PRA BAIXAR SO O AUDIO <b>DIGITE:</b> YT-DLP -X <em style="color: rgb(14, 0, 63);">[Mais a URL do Video do Youtube] <sup style="color: rgb(23, 65, 32);">( De Enter)</sup></em></b><br><br><br>
+			12*.. INSTALAR O YT-DLP e o FFMPEG PELO CMD <a href="Full installation of YT-DLP in a Faster way [G6sOzBmxrLM].mkv" download="Instalação do YT-DLP & FFMPEG">>> VIDEO EXPLICATIVO</a>
 		</fieldset>
 	</article>
 	<br>
