--- a/programas.html
+++ b/programas.html
@@ -36,7 +36,7 @@
                 <li id="programapc" class="espaço"><a class="lcor" href="https://crystalmark.info/en/download/" target="_blank">&#x1F60E CrystalDiskMark - <em style="cursor: text; color: rgb(202, 206, 0);" >Medir velocidade de SSD, HD</em></li></a> 
                 <li id="programapc" class="espaço"><a class="lcor" href="https://br.easeus.com/data-recovery-software/data-recovery-wizard-free.html?utm_source=mestresdainformatica&utm_medium=youtubevideo&utm_campaign=chris-202405-drw-ful" target="_blank">&#x1F60E EaseUS Data Recovery Wizard - <em style="cursor: text; color: rgb(202, 206, 0);" >( Recuperador de Arquivos apagados )</em></li></a>
 
-                <li id="programapc" class="espaço"><a class="lcor" href="https://br.easeus.com/partition-manager/partition-master-free.html" target="_blank">&#x1F60E EaseUS Partition Master - <a id="ladoAladoLinks" href="RecuperarSENHAdoWindows.mp4" download="Remove Senha de Login do Windows"> ( Remove Senha de Login do Windows )</a></li>
+                <li id="programapc" class="espaço"><a class="lcor" href="https://br.easeus.com/partition-manager/partition-master-free.html" target="_blank">&#x1F60E EaseUS Partition Master</a> - <a id="ladoAladoLinks" href="RecuperarSENHAdoWindows.mp4" download="Remove Senha de Login do Windows"> ( Remove Senha de Login do Windows )</a></li>
                 
                 <li id="programapc" class="espaço"><a class="lcor" href="https://www.ventoy.net/en/download.html" target="_blank">&#x1F60E MULTIBOOT - VENTOY</li></a>
                 <li id="programapc" class="espaço"><a class="lcor" href="chroma MOUSE.zip" target="_blank" download="_blank">&#x1F60E Muda Seta do MOUSE</li></a>   
@@ -44,7 +44,7 @@
                 <li id="programapc" class="espaço"><a class="lcor" href="https://pt-br.libreoffice.org/" target="_blank">&#x1F60E LibreOffice</li></a>
                 <li id="programapc" class="espaço"><a class="lcor" href="3DP_Net_v2101.zip" download="_blank">&#x1F60E 3DP NET - <em style="cursor: text; color: rgb(202, 206, 0);" >( DRIVER DE Wi - Fi )</em></li></a>
                 <li id="programapc" class="espaço"><a class="lcor" href="https://pdf.wondershare.com/pdf-reader.html?utm_source=youtube&utm_medium=influencer&utm_campaign=20240510hzzpe1xerifetech&utm_term=xerifetech&utm_content=pe_en_20034389_video" download="_blank" target="_blank">&#x1F60E PDF-reader</li></a>  
-                <li id="programapc" class="espaço"><a class="lcor" href="https://www.win-rar.com/start.html?&L=9" target="_blank">&#x1F60E WinRAR - <a id="ladoAladoLinks" href="rarreg.zip" download="rarreg" style="cursor: grab; color: rgb(243, 125, 125);"> ( ATIVADOR DO WINRAR )</a></li></a>
+                <li id="programapc" class="espaço"><a class="lcor" href="https://www.win-rar.com/start.html?&L=9" target="_blank">&#x1F60E WinRAR</a> - <a id="ladoAladoLinks" href="rarreg.zip" download="rarreg"> ( ATIVADOR DO WINRAR )</a></li>
 
             </ul>
         </div>
