--- a/CMD.html
+++ b/CMD.html
@@ -130,15 +130,19 @@
 			1*.. <b>ABRA O CMD</b><br><br><br>
 			2*.. <b>DIGITE:</b> <u style="color: rgb(87, 9, 9);">WINGET INSTALL yt-dlp.yt-dlp</u> <sup style="color: rgb(23, 65, 32);">( De Enter)</sup><br><br><br>
 			3*.. <b>DIGITE:</b> <u style="color: rgb(87, 9, 9);">WINGET INSTALL Gyan.FFmpeg</u> <sup style="color: rgb(23, 65, 32);">( De Enter)</sup><br><br><br>
-			4*.. <em style="color: rgb(23, 65, 32);">PRONTO - SO BAIXAR O VIDEO AGORA</em><br><br><br>
-			5*.. <b>DIGITE:</b> <u style="color: rgb(87, 9, 9);">YT-DLP</u> <em style="color: rgb(14, 0, 63);">[Mais a URL do Video do Youtube]</em> <sup style="color: rgb(23, 65, 32);">( De Enter)</sup><br><br><br>
-			6*.. O COMANDO ACIMA JA VAI BAIXAR O VIDEO NA MELHOR RESOLUÇÃO<br><br><br>
-			7*.. SE CASO QUEIRA BAIXAR EM OUTRA RESOLUÇÃO O VIDEO</b><br><br><br>
-			8*.. <b>DIGITE:</b> <u style="color: rgb(87, 9, 9);">YT-DLP -F</u> <em style="color: rgb(14, 0, 63);">[Mais a URL do Video do Youtube]</em> <sup style="color: rgb(23, 65, 32);">PRA PODER MOSTRAR OS FORMATOS</sup></b><br><br><br>
-			9*.. VOCE ESCOLHE O NUMERO DO ID DO VIDEO COMO NO Exemplo ABAIXO <sup style="color: rgb(99, 8, 8);">( 269 esse bestaudio ja baixa no melhor formato o audio )</sup></b><br><br><br>
-			10*.. <b>DIGITE:</b> <u style="color: rgb(87, 9, 9);">YT-DLP -f 269+bestaudio/best</u> <em style="color: rgb(14, 0, 63);">[Mais a URL do Video do Youtube] <sup style="color: rgb(23, 65, 32);">( De Enter)</sup></em></b><br><br><br>
-			11*.. PRA BAIXAR SO O AUDIO <b>DIGITE:</b> YT-DLP -X <em style="color: rgb(14, 0, 63);">[Mais a URL do Video do Youtube] <sup style="color: rgb(23, 65, 32);">( De Enter)</sup></em></b><br><br><br>
-			12*.. INSTALAR O YT-DLP e o FFMPEG PELO CMD <a href="Full installation of YT-DLP in a Faster way [G6sOzBmxrLM].mkv" download="Instalação do YT-DLP & FFMPEG">>> VIDEO EXPLICATIVO</a>
+			4*.. <b>DIGITE:</b> <u style="color: rgb(87, 9, 9);">WHERE.EXE YT-DLP</u><sup style="color: rgb(23, 65, 32);">( De Enter) </sup><br><br><br>
+			5*.. <em style="color: rgb(53, 53, 53);">O COMANDO WHERE.EXE VAI MOSTRA O CAMINHO ONDE ESTA INSTALADO O YT-DLP e o FFMPEG</em><br><br><br>
+			6*.. <em style="color: rgb(53, 53, 53);">COPIA O CAMINHO e ABRA O (EXPLORADOR DE ARQUIVO DO WINDOWS) COLE NA BARRA DE PESQUISA O CAMINHO DO DIRETORIO</em><br><br><br>
+			7*.. <em style="color: rgb(53, 53, 53);">ABRE A PASTA FFMPEG E COPIE OS 3 ARQUIVOS DA PASTA (BIN) E COLE NA PASTA (YT-DLP)</em><br><br><br>
+			8*.. PRONTO SO BAIXAR O VIDEO DO YOU-TUBE</b><br><br><br>
+			9*.. <b>DIGITE:</b> <u style="color: rgb(87, 9, 9);">YT-DLP</u> <em style="color: rgb(14, 0, 63);">[Mais a URL do Video do Youtube]</em> <sup style="color: rgb(23, 65, 32);">( De Enter)</sup><br><br><br>
+			10*.. O COMANDO ACIMA JA VAI BAIXAR O VIDEO NA MELHOR RESOLUÇÃO<br><br><br>
+			11*.. SE CASO QUEIRA BAIXAR EM OUTRA RESOLUÇÃO O VIDEO</b><br><br><br>
+			12*.. <b>DIGITE:</b> <u style="color: rgb(87, 9, 9);">YT-DLP -F</u> <em style="color: rgb(14, 0, 63);">[Mais a URL do Video do Youtube]</em> <sup style="color: rgb(23, 65, 32);">PRA PODER MOSTRAR OS FORMATOS</sup></b><br><br><br>
+			13*.. VOCE ESCOLHE O NUMERO DO ID DO VIDEO COMO NO Exemplo ABAIXO <sup style="color: rgb(99, 8, 8);">( 269 esse bestaudio ja baixa no melhor formato o audio )</sup></b><br><br><br>
+			14*.. <b>DIGITE:</b> <u style="color: rgb(87, 9, 9);">YT-DLP -f 269+bestaudio/best</u> <em style="color: rgb(14, 0, 63);">[Mais a URL do Video do Youtube] <sup style="color: rgb(23, 65, 32);">( De Enter)</sup></em></b><br><br><br>
+			15*.. PRA BAIXAR SO O AUDIO <b>DIGITE:</b> YT-DLP -X <em style="color: rgb(14, 0, 63);">[Mais a URL do Video do Youtube] <sup style="color: rgb(23, 65, 32);">( De Enter)</sup></em></b><br><br><br>
+			16*.. INSTALAR O YT-DLP e o FFMPEG PELO CMD <a href="Full installation of YT-DLP in a Faster way [G6sOzBmxrLM].mkv" download="Instalação do YT-DLP & FFMPEG">>> VIDEO EXPLICATIVO</a>
 		</fieldset>
 	</article>
 	<br>
