--- a/programas.html
+++ b/programas.html
@@ -36,7 +36,7 @@
                 <li id="programapc" class="espaço"><a class="lcor" href="https://crystalmark.info/en/download/" target="_blank">&#x1F60E CrystalDiskMark - <em style="cursor: text; color: rgb(202, 206, 0);" >Medir velocidade de SSD, HD</em></li></a> 
                 <li id="programapc" class="espaço"><a class="lcor" href="https://br.easeus.com/data-recovery-software/data-recovery-wizard-free.html?utm_source=mestresdainformatica&utm_medium=youtubevideo&utm_campaign=chris-202405-drw-ful" target="_blank">&#x1F60E EaseUS Data Recovery Wizard - <em style="cursor: text; color: rgb(202, 206, 0);" >( Recuperador de Arquivos apagados )</em></li></a>
 
-                <li id="programapc" class="espaço"><a class="lcor" href="https://br.easeus.com/partition-manager/partition-master-free.html" target="_blank">&#x1F60E EaseUS Partition Master</a> - <a id="ladoAladoLinks" href="RecuperarSENHAdoWindows.mp4" download="Remove Senha de Login do Windows"> ( Remove Senha de Login do Windows )</a></li>
+                <li id="programapc" class="espaço"><a class="lcor" href="https://br.easeus.com/partition-manager/partition-master-free.html" target="_blank">&#x1F60E EaseUS Partition Master</a> - <a id="ladoAladoLinks" href="https://youtu.be/a1qdu1AIfIY?si=6HASXmOzL8X4nZqA" target="_blank"> ( Remove Senha de Login do Windows )</a></li>
                 
                 <li id="programapc" class="espaço"><a class="lcor" href="https://www.ventoy.net/en/download.html" target="_blank">&#x1F60E MULTIBOOT - VENTOY</li></a>
                 <li id="programapc" class="espaço"><a class="lcor" href="chroma MOUSE.zip" target="_blank" download="_blank">&#x1F60E Muda Seta do MOUSE</li></a>   
