--- a/CMD.html
+++ b/CMD.html
@@ -68,6 +68,9 @@
 			2*.. DEPOIS DE INSTALAR O Aplicativo<br><br>
 			3*.. ABRA O CMD & DIGITA WINGET<br><br>
 			4*.. E PRONTO<br><br>
+			5*.. <b style="color: rgb(0, 66, 6);"> OUTRO MODO PRA ATIVAR O WINGET NO WINDOWS</b><br><br>
+			6*.. <B>ABRA O POWERSHELL</B><br><br>
+			7*.. <b>DIGITE O CODIGO:</b> <u style="color: rgb(87, 9, 9);">Add-AppxPackage -RegisterByFamilyName -MainPackage Microsoft.DesktopAppInstaller_8wekyb3d8bbwe</u><br><br>
 		</fieldset>
 	</article>
 	<BR><BR>
