--- a/Tela-Login/index.html
+++ b/Tela-Login/index.html
@@ -140,7 +140,7 @@
             (login == "joel" && senha == "joel") ||
             (login == "sousa" && senha == "sousa")
         ) {
-            location.href = "../indexx.html";
+            location.href = "./indexx.html";
         }
         else {
             alert('senha ou login esta incorreto');
