--- a/instalacao sem a conta da Microsoft.html
+++ b/instalacao sem a conta da Microsoft.html
@@ -44,6 +44,15 @@
         </div>
       </div>
     
-    
+        <!---SCRIPTY DA Tela Login-->
+  <script>
+      // Verifica se o usuário está logado
+    if (sessionStorage.getItem("logado") !== "true") {
+      // Redireciona para o login se não estiver logado
+      window.location.href = "index.html";
+    }
+
+  </script>
+  
 </body>
 </html>
