--- a/CMD.html
+++ b/CMD.html
@@ -149,5 +149,16 @@
 		</fieldset>
 	</article>
 	<br>
+
+	<!---SCRIPTY DA Tela Login-->
+  <script>
+      // Verifica se o usuário está logado
+    if (sessionStorage.getItem("logado") !== "true") {
+      // Redireciona para o login se não estiver logado
+      window.location.href = "index.html";
+    }
+
+	</script>
+	
 </body>
 </html>
