--- a/Extensao.html
+++ b/Extensao.html
@@ -47,5 +47,15 @@
         </fieldset>
       </article>
 	
+          <!---SCRIPTY DA Tela Login-->
+  <script>
+      // Verifica se o usuário está logado
+    if (sessionStorage.getItem("logado") !== "true") {
+      // Redireciona para o login se não estiver logado
+      window.location.href = "index.html";
+    }
+
+  </script>
+  
 </body>
 </html>
