--- a/programas.html
+++ b/programas.html
@@ -49,5 +49,16 @@
             </ul>
         </div>
     </section>
+
+        <!---SCRIPTY DA Tela Login-->
+  <script>
+      // Verifica se o usuário está logado
+    if (sessionStorage.getItem("logado") !== "true") {
+      // Redireciona para o login se não estiver logado
+      window.location.href = "index.html";
+    }
+
+  </script>
+  
 </body>
 </html>
