--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
       // Login autorizado apenas se login e senha forem iguais
       if ((login === "joel" && senha === "joel") ||
-          (login === "sousa" && senha === "sousa")) {
+          (login === "@Stm#2025" && senha === "@Stm#2025")) {
 
         // Salva o login apenas para esta aba
         sessionStorage.setItem("logado", "true");
