--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       var senha = document.getElementById('password').value;
 
       // Login autorizado apenas se login e senha forem iguais
-      if ((login === "" && senha === "") ||
+      if ((login === "#" && senha === "#") ||
           (login === "@Stm#2025" && senha === "@Stm#2025")) {
 
         // Salva o login apenas para esta aba
