--- a/IP.html
+++ b/IP.html
@@ -70,7 +70,7 @@
           <a href="tabela celulares Gigabit.png" target="_blank"><table>
             <thead>
               <tr>
-                <th>Tipo de Wi-Fi no celular</th>
+                <th>Wi-Fi no celular</th>
                 <th>MIMO comum</th>
                 <th>Banda usada</th>
                 <th>Velocidade mínima real</th>
@@ -93,7 +93,7 @@
                 <td>800–950 Mbps</td>
               </tr>
               <tr>
-                <td>Wi-Fi 6E (802.11ax - 6GHz)</td>
+                <td>Wi-Fi 6E (802.11ax)</td>
                 <td>2x2 a 4x4</td>
                 <td>6 GHz</td>
                 <td>500–700 Mbps</td>
@@ -113,6 +113,92 @@
           <li id="espaço">Distância do Roteador, obstáculos, canal, interferência, qualidade do roteador e largura de banda (80/160/320 MHz).</li>
           <li id="espaço">Mesmo com Wi-Fi 6/6E, se o roteador for fraco ou a banda estiver congestionada, o celular pode não chegar aos 900+ Mbps</li>
           <li id="espaço">Para Wi-Fi 7, ainda são poucos os roteadores disponíveis no Brasil, então mesmo com um celular compatível, o desempenho depende da rede.</li>
+        </div>
+    </div>
+
+    <div class="item">
+      <div class="titulo" onclick="toggleItem(this)">
+        <span class="icone">＋</span>
+        Categorias de Cabos de Rede Ethernet
+        <span class="icone">＋</span>
+      </div>
+      <div class="conteudo"  style="overflow: auto;">
+          <table>
+            <thead>
+              <tr>
+                <th>Categoria</th>
+                <th>Velocidade Máxima</th>
+                <th>Frequência</th>
+                <th>Distância Máxima (p/ velocidade plena)</th>
+                <th>Blindagem Comum</th>
+                <th>Uso Típico</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Cat 5</td>
+                <td>100 Mbps (0,1 Gbps)</td>
+                <td>100 MHz</td>
+                <td>100 metros</td>
+                <td>UTP (não blindado)</td>
+                <td>Redes antigas, substituído por Cat 5e ou superior</td>
+              </tr>
+              <tr>
+                <td>Cat 5e</td>
+                <td>1 Gbps</td>
+                <td>100 MHz</td>
+                <td>100 metros</td>
+                <td>UTP / FTP</td>
+                <td>Residências e escritórios — ainda muito comum</td>
+              </tr>
+              <tr>
+                <td>Cat 6</td>
+                <td>1 Gbps (até 100 m) 10 Gbps (até 55 m)</td>
+                <td>250 MHz</td>
+                <td>100 m (1 Gbps) 55 m (10 Gbps)</td>
+                <td>UTP / FTP / STP</td>
+                <td>Ambientes com mais tráfego de dados</td>
+              </tr>
+              <tr>
+                <td>Cat 6a</td>
+                <td>10 Gbps</td>
+                <td>500 MHz</td>
+                <td>100 metros</td>
+                <td>FTP / STP</td>
+                <td>Data centers, empresas, redes de alta performance</td>
+              </tr>
+              <tr>
+                <td>Cat 7</td>
+                <td>10 Gbps</td>
+                <td>600 MHz</td>
+                <td>100 metros</td>
+                <td>S/FTP</td>
+                <td>Ambientes industriais ou com muita interferência</td>
+              </tr>
+              <tr>
+                <td>Cat 7a</td>
+                <td>10 Gbps (até 100 m) Possível 40 Gbps (até 50 m)</td>
+                <td>1000 MHz</td>
+                <td>100 m (10 Gbps) 50 m (40 Gbps)</td>
+                <td>S/FTP</td>
+                <td>Uso profissional/industrial de alta densidade</td>
+              </tr>
+              <tr>
+                <td>Cat 8</td>
+                <td>25 Gbps ou 40 Gbps</td>
+                <td>2000 MHz</td>
+                <td>30 metros</td>
+                <td>S/FTP</td>
+                <td>Data centers e conexões servidor-servidor</td>
+              </tr>
+            </tbody>
+          </table>
+        </a>
+        <h4>TIPOS DE BLINDAGEM:</h4>
+          <li id="espaço"><b>UTP =</b> Par Trançado Não Blindado (sem blindagem)</li>
+          <li id="espaço"><b>FTP =</b> = Par trançado frustrado (blindagem com folha)</li>
+          <li id="espaço"><b>STP =</b> Blindagem de Par Trançado (blindagem individual por par)</li>
+          <li id="espaço"><b>S/FTP =</b> Blindagem geral + por par (uso profissional)</li><br>
         </div>
     </div>
 
