--- a/IP.html
+++ b/IP.html
@@ -48,6 +48,42 @@
     <div class="item">
       <div class="titulo" onclick="toggleItem(this)">
         <span class="icone">＋</span>
+        TIPOS DE NAT - PARA JOGOS XBOX
+        <span class="icone">＋</span>
+      </div>
+      <div class="conteudo" style="overflow: scroll;">
+        <H4>🔓 NAT Aberto (Open NAT)</H4>
+        <li>✅ <b>Melhor tipo de NAT</b> para jogos online.</li>
+        <li>Você pode se conectar com <b>qualquer tipo de NAT</b> (Aberto, Moderado ou Estrito).</li>
+        <li>Pouca ou nenhuma interferência no matchmaking.</li>
+        <li>Ideal para hostear partidas e usar chat de voz.</li>
+
+        <h4>⚠️ NAT Moderado (Moderate NAT)</h4>
+        <li>Pode se conectar com jogadores com NAT Aberto ou Moderado.</li>
+        <li>❌ Pode ter dificuldade com NAT Estrito.</li>
+        <li>Pode afetar a qualidade do chat de voz e matchmaking.</li>
+        <li>Um pouco mais restrito, mas ainda funcional para jogos online.</li>
+
+        <h4>🔒 NAT Estrito (Strict NAT)</h4>
+        <li>❌ Consegue se conectar apenas com jogadores que têm NAT Aberto.</li>
+        <li>Problemas frequentes de matchmaking (demora ou falha ao encontrar partidas).</li>
+        <li>Pode bloquear o uso do chat de voz.</li>
+        <li>Não recomendado para jogos online.</li>
+
+        <h4>✅ O que é matchmaking?</h4>
+        <li>É o sistema que o jogo usa para encontrar outros jogadores e te colocar em uma partida online.</li>
+      
+        <h4>🔍 Ele escolhe os jogadores com base em:</h4>
+        <li>Nível de habilidade</li>
+        <li>Ping (velocidade da conexão)</li>
+        <li>Região</li>
+        <li>Tipo de NAT</li>
+      </div>
+    </div>
+
+    <div class="item">
+      <div class="titulo" onclick="toggleItem(this)">
+        <span class="icone">＋</span>
         O que é uma rede de computadores?
         <span class="icone">＋</span>
       </div>
