--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
         #icon {
             position: relative;
-            left: 6.9rem;
+            left: 6.7rem;
             transform: translateY(-190%);
             background-image: url(Tela-Login/show.png);
             background-size: cover;
@@ -135,6 +135,9 @@
     }
 
 .login-container{
+      display: flex;
+      align-items: center;
+      justify-content: center;
       
       padding: 2rem;
       border-radius: 12px;
