--- a/CMD.html
+++ b/CMD.html
@@ -32,6 +32,42 @@
     </nav>
     <article>
 		<fieldset>
+			<legend>COMANDO CMD ADICIONAR NOVO USUARIO COMO ADMINISTRADOR</legend><br>
+			1*.. ABRA O CMD COMO ADMIN.<br><br>
+			2*.. DIGITE <mark>NET USER (NOME DO USUARIO) /ADD</mark><br><br><br>
+			3*.. DIGITE <mark>NET LOCALGROUP ADMINISTRADORES (NOME DO USUARIO) /ADD</mark><br><br><br>
+			4*.. A OPCAO <B style="color: brown;">2 FICA COMO USUARIO NORMAL</B><br><br><br>
+			5*.. A OPCAO <B style="color: brown;">3 DEIXA COMO USUARIO ADMINISTRADOR</B><br><br><br>
+			6*.. SO ESCOLHER QUAL OPCAO QUE VC QUER USAR O NOVO USUARIO<br><br><br>
+		</fieldset>
+	</article>
+	<BR><BR>
+
+
+	<article>
+		<fieldset>
+			<legend>COMANDO CMD QUE REMOVE SENHA DE LOGIN DO WINDOWS SEM PROGRAMAS</legend><br>
+			1*.. COM O <MARK>PC LIGADO SEGURE</MARK> A TECLA <B style="color: rgb(107, 8, 8);" >(SHFIT)</B> E REINICIA O PC MAS SEM SOLTAR O <B style="color: rgb(107, 8, 8);" >SHIFIT</B><br><br>
+			2*.. O PC VAI ABRIR UMA <B style="color: rgb(107, 8, 8);" >TELA AZUL</B> VAI NA OPCAO <MARK>(PROMPT DE COMANDO)</MARK> - VAI ABRIR O CMD<br><br><br>
+			3*.. VC VAI DIGITAR <MARK>A UNIDADE</MARK> ONDE O SEU WINDOWS ESTA INSTALADO <B style="color: rgb(107, 8, 8);" >Exemplo: (C: / D: OU E: )</B><br><br><br>
+			4*.. QUANDO SOUBER EM QUAL UNIDADE ESTAR O SEU WINDOWS VC DIGITA<br><br><br>
+			5*.. DIGITA: <B style="color: rgb(107, 8, 8);" >CD C:\WINDOWS\SYSTEM32</B><br><br><br>
+			6*.. DEPOIS DE ENTRAR NA PASTA <mark>SYSTEM32</mark> VC DIGITA<br><br><br>
+			7*.. DIGITA: <B style="color: rgb(107, 8, 8);" >REN UTILMAN.EXE UTILMAN1.EXE</B> - DE ENTER<br><br><br>
+			8*.. DIGITA: <B style="color: rgb(107, 8, 8);" >REN CMD.EXE UTILMAN.EXE</B> - DE NETER<br><br><br>
+			9*.. DIGITA: <MARK>EXIT,</MARK> PRA SAIR DO CMD E INICIAR PRA TELA DE LOGIN DO WINDOWS<br><br><br>
+			10*.. VAI NA OPCAO DE <mark>(<img src="people.png" width="25px" height="20px">ACESSIBILIDADE<img src="people.png" width="25px" height="20px">)</mark>  QUE FICA NO CANTO INFERIOR DIRETO DA TELA<br><br><br>
+			11*.. QUANDO CLICAR NA OPCAO <B style="color: rgb(107, 8, 8);" >VAI ABRIR O CMD</B> AI VC DIGITA<br><br><br>
+			12*.. DIGITA: <B style="color: rgb(107, 8, 8);" >NET USER</B> - DE ENTER <MARK>( VAI APARECER OS USUARIOS QUE TEM NO PC SO ESCOLHER QUAL QUER REMOVER A SENHA)</MARK><br><br><br>
+			13*.. DIGITA: <B style="color: rgb(107, 8, 8);" >NET USER (NOME DO USUARIO) *</B> DE ENTER<br><br><br>
+			14*.. VAI PEDIR PRA <MARK>DIGITAR A SENHA</MARK> CASO NAO QUEIRA TROCAR A SENHA E SO DA <B style="color: rgb(107, 8, 8);" >ENTER DUAS VEZES QUE VAI FICAR SEM SENHA</B><br><br><br>
+			15*.. EM CASO DE DUVIDA <B style="color: rgb(107, 8, 8);" >VEJA O VIDEO</B> >>> <A style="color: rgb(94, 0, 86);" target="_blank" href="https://youtu.be/rS3lPDJNdiw?si=BsDlirh6u9gUkzai">REMOVENDO SENHA</A>
+		</fieldset>
+	</article>
+	<BR><BR>
+
+	<article>
+		<fieldset>
 			<legend>COMANDO CMD EXCLUI PARTIÇÕES GERADA PELO VENTOY</legend><br>
 			1*.. ABRA O CMD COMO ADMIN.<br><br>
 			2*.. DIGITE <mark>DISKPART</mark><br><br><br>
@@ -64,7 +100,7 @@
 			<legend>Ativar o Comando WINGET no Windows_10</legend><br>
 			<h2>Ativar o Comando WINGET no Windows_10</h2>
 			<h3 style="color: rgb(117, 0, 0);">NO S.O_11 JA VEM COM ESSA FUNÇÃO ATIVADO - SO NAS VERSOES ANTIGAS QUE PRECISA ATIVAR</h3>
-			1*.. ACESSA O LINK E INSTALE O <a href="https://encurtador.com.br/Ox2BK" target="_blank" style="color: rgb(112, 1, 75);">( Instalador de Aplicativo )</a><br><br>
+			1*.. BAIXE E INSTALE O APLICATIVO <a href="https://aka.ms/getwingetpreview" target="_blank" style="color: rgb(112, 1, 75);">( Instalador de Aplicativo )</a><br><br>
 			2*.. DEPOIS DE INSTALAR O Aplicativo<br><br>
 			3*.. ABRA O CMD & DIGITA WINGET<br><br>
 			4*.. E PRONTO<br><br>
