--- a/IP.html
+++ b/IP.html
@@ -48,6 +48,53 @@
     <div class="item">
       <div class="titulo" onclick="toggleItem(this)">
         <span class="icone">＋</span>
+        🔥 O que é Firewall / WAF?
+        <span class="icone">＋</span>
+      </div>
+      <div class="conteudo" style="overflow: scroll;">
+        <H4>🔒 FIREWALL</H4>
+        <li>É um “Porteiro Digital”.</li>
+        <li>Ele controla quem pode entrar e quem não pode entrar no servidor ou site.</li>
+        <h4>🔒 <b>Ele Pode Bloquear:</b></h4>
+        <li>＋ Faixas de IP</li>
+        <li>＋ Países Inteiros</li>
+        <li>＋ Provedores Específicos</li>
+        <li>＋ Conexões Suspeitas</li>
+        <li>＋ Ataques</li>
+
+        <h4>🛡️ WAF (Web Application Firewall)</h4>
+        <em>É UM FIREWALL Mais Inteligente, Feito Especificamente Para Proteger SITES.</em>
+        <h4>FIREWALL Analisa:</h4>
+        <li>＋ Ataques Vindos de Bots</li>
+        <li>＋ Excesso de Acessos de um Mesmo IP</li>
+        <li>＋ Tentativas de Login Repetidas</li>
+        <li>＋ Acessos de Provedores Suspeitos</li>
+        <li>＋ Padrões de Ataque (SQL injection, etc.)</li>
+
+        <h4>O FIREWALL Toma Decisões Automáticas:</h4>
+        <li>Pode Bloquear seu IP</li>
+        <li>Pode Bloquear Toda a Faixa do Provedor</li>
+        <li>Pode Exigir Captcha</li>
+        <li>Pode Impedir Acesso Total</li>
+
+        <h4>Plataformas Que Usam WAF:</h4>
+        <li>Cloudflare</li>
+        <li>Sucuri</li>
+        <li>Imunify360</li>
+        <li>ModSecurity</li>
+        <br>
+
+        <h4>🔧Ferramenta de Teste de Bloqueio de Sites</h4>
+        <B><a href="https://ooni.org/pt/support/ooni-probe-desktop/?utm_source=chatgpt.com" target="_blank">OONI PROBE:</a></B> <EM>(Disponível Para Desktop e Celular)</EM>
+        Ele verifica se um Site está Bloqueado para sua Rede ou se há “Interferência” no Caminho — Ideal Pra Ver se o Problema é só Contigo ou Geral.
+        <br>
+      </div>
+    </div>
+
+
+    <div class="item">
+      <div class="titulo" onclick="toggleItem(this)">
+        <span class="icone">＋</span>
         TIPOS DE NAT - PARA JOGOS XBOX
         <span class="icone">＋</span>
       </div>
@@ -80,6 +127,7 @@
         <li>Tipo de NAT</li>
       </div>
     </div>
+
 
     <div class="item">
       <div class="titulo" onclick="toggleItem(this)">
